--- a/app/src/main/res/layout/activity_user_profil.xml
+++ b/app/src/main/res/layout/activity_user_profil.xml
@@ -2,21 +2,18 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".UserProfilActivity">
-
         <RelativeLayout
             android:id="@+id/rellay1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/grad"
             android:paddingBottom="20dp">
-
             <RelativeLayout
                 android:id="@+id/imgUser"
                 android:layout_width="wrap_content"
@@ -24,7 +21,6 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/circle_border">
-
                 <ImageView
                     android:layout_width="120dp"
                     android:layout_height="120dp"
@@ -34,9 +30,7 @@
                     android:padding="3dp"
                     android:scaleType="centerInside"
                     android:src="@drawable/avatar" />
-
             </RelativeLayout>
-
             <TextView
                 android:id="@+id/user_name"
                 android:layout_width="wrap_content"
@@ -48,7 +42,6 @@
                 android:text="@string/user_name"
                 android:textColor="@color/white"
                 android:textSize="32sp" />
-
             <TextView
                 android:id="@+id/user_address"
                 android:layout_width="wrap_content"
@@ -60,39 +53,34 @@
                 android:textAllCaps="true"
                 android:textColor="@color/address"
                 android:textSize="14sp" />
-
             <ImageView
                 android:id="@+id/button_parametre"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="54dp"
+                android:layout_height="46dp"
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="15dp"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
                 android:src="@drawable/ic_settings" />
-
             <ImageView
                 android:id="@+id/button_map"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="64dp"
+                android:layout_height="82dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginStart="18dp"
-                android:layout_marginTop="22dp"
+                android:layout_marginStart="6dp"
+                android:layout_marginTop="4dp"
                 android:adjustViewBounds="true"
                 android:scaleType="centerInside"
                 app:srcCompat="@drawable/mapbox_marker_icon_default" />
-
         </RelativeLayout>
-
         <LinearLayout
             android:id="@+id/linlay1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/rellay1"
             android:orientation="horizontal">
-
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -102,13 +90,11 @@
                 android:gravity="center"
                 android:paddingTop="15dp"
                 android:paddingBottom="13dp">
-
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
                     android:orientation="vertical">
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -116,12 +102,8 @@
                         android:text="@string/search"
                         android:textColor="@color/white"
                         android:textSize="25sp" />
-
-
                 </LinearLayout>
-
             </RelativeLayout>
-
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -131,13 +113,11 @@
                 android:gravity="center"
                 android:paddingTop="15dp"
                 android:paddingBottom="13dp">
-
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
                     android:orientation="vertical">
-
                     <TextView
                         android:id="@+id/button_deconnexion"
                         android:layout_width="wrap_content"
@@ -146,19 +126,13 @@
                         android:text="@string/log_out"
                         android:textColor="@color/white"
                         android:textSize="25sp" />
-
                 </LinearLayout>
-
             </RelativeLayout>
-
         </LinearLayout>
-
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/linlay1">
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -167,19 +141,66 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="30dp"
                 android:orientation="vertical">
-
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/title_nom_text"
+                        android:textColor="@color/headings"
+                        android:textSize="13sp" />
+                    <TextView
+                        android:id="@+id/user_lastname"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="sans-serif-light"
+                        android:text="@string/user_name"
+                        android:textColor="#000000"
+                        android:textSize="18sp" />
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginTop="15dp"
+                        android:background="@color/grey" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/title_pseudo_text"
+                        android:textColor="@color/headings"
+                        android:textSize="13sp" />
+                    <TextView
+                        android:id="@+id/user_firstname"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="sans-serif-light"
+                        android:text="@string/user_firstname"
+                        android:textColor="#000000"
+                        android:textSize="18sp" />
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginTop="15dp"
+                        android:background="@color/grey" />
+                </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/email"
                         android:textColor="@color/headings"
                         android:textSize="13sp" />
-
                     <TextView
                         android:id="@+id/user_email"
                         android:layout_width="wrap_content"
@@ -188,28 +209,23 @@
                         android:text="@string/user_email"
                         android:textColor="#000000"
                         android:textSize="18sp" />
-
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_marginTop="15dp"
                         android:background="@color/grey" />
-
                 </LinearLayout>
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:orientation="vertical">
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/password"
                         android:textColor="@color/headings"
                         android:textSize="13sp" />
-
                     <TextView
                         android:id="@+id/user_password"
                         android:layout_width="wrap_content"
@@ -219,28 +235,23 @@
                         android:textColor="#000000"
                         android:textSize="18sp"
                         tools:ignore="HardcodedText" />
-
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_marginTop="15dp"
                         android:background="@color/grey" />
-
                 </LinearLayout>
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:orientation="vertical">
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/user_birthday_title"
                         android:textColor="@color/headings"
                         android:textSize="13sp" />
-
                     <TextView
                         android:id="@+id/user_birthday"
                         android:layout_width="wrap_content"
@@ -249,28 +260,23 @@
                         android:text="@string/user_birthday"
                         android:textColor="#000000"
                         android:textSize="18sp" />
-
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_marginTop="15dp"
                         android:background="@color/grey" />
-
                 </LinearLayout>
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:orientation="vertical">
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/user_goal_title"
                         android:textColor="@color/headings"
                         android:textSize="13sp" />
-
                     <TextView
                         android:id="@+id/user_goal"
                         android:layout_width="wrap_content"
@@ -279,19 +285,13 @@
                         android:text="@string/user_goal"
                         android:textColor="#000000"
                         android:textSize="18sp" />
-
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_marginTop="15dp"
                         android:background="@color/grey" />
-
                 </LinearLayout>
-
             </LinearLayout>
-
         </RelativeLayout>
-
     </RelativeLayout>
-
 </ScrollView>
