--- a/app/src/main/res/layout/activity_connexion.xml
+++ b/app/src/main/res/layout/activity_connexion.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F0FF3F"
+    android:background="@drawable/grad"
     tools:context=".ConnexionActivity">
 
     <!-- Logo Connexion-->
@@ -20,6 +21,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/ic_launcher"/>
+
+    <!-- Nom de l'application -->
+    <TextView
+        android:id="@+id/appli_name"
+        android:layout_width="@dimen/appli_name_width"
+        android:layout_height="@dimen/appli_name_height"
+        android:layout_marginStart="@dimen/appli_name_marginStart"
+        android:layout_marginTop="@dimen/appli_name_marginTop"
+        android:layout_marginEnd="@dimen/appli_name_marginEnd"
+        android:layout_centerHorizontal="true"
+        android:fontFamily="sans-serif-light"
+        android:text="Date Place"
+        android:textColor="@color/white"
+        android:textSize="32sp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="121dp"
+        tools:layout_editor_absoluteY="344dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logo_connexion_app"/>
 
     <!-- Champs email de connexion-->
     <EditText
@@ -40,7 +62,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logo_connexion_app"/>
+        app:layout_constraintTop_toBottomOf="@+id/appli_name"/>
 
     <!-- Champs password de connexion-->
     <EditText
@@ -63,6 +85,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/connexion_identifier"/>
 
+    <!-- Bouton de connexion-->
+    <Button
+        android:id="@+id/button_connect"
+        android:layout_width="@dimen/button_connect_width"
+        android:layout_height="@dimen/button_connect_height"
+        android:layout_marginTop="@dimen/button_connect_marginTop"
+        android:layout_marginStart="@dimen/button_connect_marginStart"
+        android:layout_marginEnd="@dimen/button_connect_marginEnd"
+        android:background="@drawable/background_button_connexion"
+        android:text="@string/button_connect_text"
+        android:textColor="#000"
+        android:textSize="@dimen/button_text_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/connexion_password"/>
+
     <!-- Bouton de retour-->
     <Button
         android:id="@+id/button_goback"
@@ -70,40 +109,33 @@
         android:layout_height="@dimen/button_goback_height"
         android:layout_marginStart="@dimen/button_goback_marginStart"
         android:layout_marginBottom="@dimen/button_goback_marginBottom"
+        android:layout_marginTop="@dimen/button_goback_marginTop"
+        android:layout_marginEnd="@dimen/button_goback_marginEnd"
         android:background="@drawable/background_button_connexion"
         android:text="@string/button_goback_text"
         android:textColor="#000"
         android:textSize="@dimen/button_text_size"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <!-- Bouton de connexion-->
-    <Button
-        android:id="@+id/button_connect"
-        android:layout_width="@dimen/button_connect_width"
-        android:layout_height="@dimen/button_connect_height"
-        android:layout_marginStart="@dimen/button_connect_marginStart"
-        android:layout_marginEnd="@dimen/button_connect_marginEnd"
-        android:layout_marginBottom="@dimen/button_connect_marginBottom"
-        android:background="@drawable/background_button_connexion"
-        android:text="@string/button_connect_text"
-        android:textColor="#000"
-        android:textSize="@dimen/button_text_size"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button_goback"/>
-
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_connect"/>
 
     <!-- Bouton d'inscription-->
-    <ImageView
+    <Button
         android:id="@+id/button_go_inscription"
         android:layout_width="@dimen/button_go_inscription_width"
         android:layout_height="@dimen/button_go_inscription_height"
         android:layout_marginEnd="@dimen/button_go_inscription_marginEnd"
         android:layout_marginBottom="@dimen/button_go_inscription_marginBottom"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="@dimen/button_go_inscription_marginTop"
+        android:background="@drawable/background_button_connexion"
+        android:text="@string/button_sign_up"
+        android:textColor="#000"
+        android:textSize="@dimen/button_text_size"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/moreinfo_arrow" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/button_goback"
+        app:layout_constraintTop_toBottomOf="@+id/button_connect" />
 
 
 </android.support.constraint.ConstraintLayout>
