--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,8 +5,10 @@
 
     <dimen name="button_goback_width">80dp</dimen>
     <dimen name="button_goback_height">40dp</dimen>
-    <dimen name="button_goback_marginStart">102dp</dimen>
+    <dimen name="button_goback_marginStart">30dp</dimen>
     <dimen name="button_goback_marginBottom">40dp</dimen>
+    <dimen name="button_goback_marginTop">30dp</dimen>
+    <dimen name="button_goback_marginEnd">250dp</dimen>
     <!-- activity_run_ap -->
     <dimen name="logo_run_app_width">300dp</dimen>
     <dimen name="logo_run_app_height">300dp</dimen>
@@ -27,34 +29,42 @@
     <dimen name="button_inscription_run_app_marginStart">102dp</dimen>
     <dimen name="button_inscription_run_app_marginTop">10dp</dimen>
     <dimen name="button_inscription_run_app_marginEnd">102dp</dimen>
+
     <!-- activity_connexion -->
+
     <dimen name="logo_connexion_app_width">300dp</dimen>
     <dimen name="logo_connexion_app_height">300dp</dimen>
     <dimen name="logo_connexion_app_marginStart">70dp</dimen>
     <dimen name="logo_connexion_app_marginTop">40dp</dimen>
     <dimen name="logo_connexion_app_marginEnd">70dp</dimen>
 
-    <dimen name="connexion_identifier_width">180dp</dimen>
+    <dimen name="appli_name_width">160dp</dimen>
+    <dimen name="appli_name_height">40dp</dimen>
+    <dimen name="appli_name_marginStart">120dp</dimen>
+    <dimen name="appli_name_marginTop">20dp</dimen>
+    <dimen name="appli_name_marginEnd">130dp</dimen>
+
+    <dimen name="connexion_identifier_width">340dp</dimen>
     <dimen name="connexion_identifier_height">40dp</dimen>
-    <dimen name="connexion_identifier_marginStart">102dp</dimen>
+    <dimen name="connexion_identifier_marginStart">40dp</dimen>
     <dimen name="connexion_identifier_marginTop">40dp</dimen>
-    <dimen name="connexion_identifier_marginEnd">102dp</dimen>
+    <dimen name="connexion_identifier_marginEnd">40dp</dimen>
     <dimen name="connexion_identifier_paddingTop">4dp</dimen>
-    <dimen name="connexion_identifier_paddingLeft">20dp</dimen>
+    <dimen name="connexion_identifier_paddingLeft">150dp</dimen>
 
-    <dimen name="connexion_password_width">180dp</dimen>
+    <dimen name="connexion_password_width">340dp</dimen>
     <dimen name="connexion_password_height">40dp</dimen>
-    <dimen name="connexion_password_marginStart">102dp</dimen>
+    <dimen name="connexion_password_marginStart">40dp</dimen>
     <dimen name="connexion_password_marginTop">10dp</dimen>
-    <dimen name="connexion_password_marginEnd">102dp</dimen>
+    <dimen name="connexion_password_marginEnd">40dp</dimen>
     <dimen name="connexion_password_paddingTop">4dp</dimen>
-    <dimen name="connexion_password_paddingLeft">20dp</dimen>
+    <dimen name="connexion_password_paddingLeft">140dp</dimen>
 
-    <dimen name="button_connect_width">65dp</dimen>
+    <dimen name="button_connect_width">340dp</dimen>
     <dimen name="button_connect_height">40dp</dimen>
-    <dimen name="button_connect_marginStart">15dp</dimen>
-    <dimen name="button_connect_marginEnd">102dp</dimen>
-    <dimen name="button_connect_marginBottom">40dp</dimen>
+    <dimen name="button_connect_marginTop">20dp</dimen>
+    <dimen name="button_connect_marginStart">40dp</dimen>
+    <dimen name="button_connect_marginEnd">40dp</dimen>
     <!-- activity_inscription -->
     <dimen name="logo_inscription_app_width">100dp</dimen>
     <dimen name="logo_inscription_app_height">100dp</dimen>
@@ -79,9 +89,11 @@
     <dimen name="button_inscrip_marginEnd">80dp</dimen>
     <dimen name="button_inscrip_marginBottom">40dp</dimen>
 
-    <dimen name ="button_go_inscription_width">50dp</dimen>
-    <dimen name ="button_go_inscription_height">45dp</dimen>
-    <dimen name ="button_go_inscription_marginStart">50dp</dimen>
-    <dimen name ="button_go_inscription_marginEnd">25dp</dimen>
-    <dimen name ="button_go_inscription_marginBottom">145dp</dimen>
+    <dimen name ="button_go_inscription_width">200dp</dimen>
+    <dimen name ="button_go_inscription_height">40dp</dimen>
+    <dimen name ="button_go_inscription_marginStart">30dp</dimen>
+    <dimen name ="button_go_inscription_marginEnd">40dp</dimen>
+    <dimen name ="button_go_inscription_marginBottom">40dp</dimen>
+    <dimen name="button_go_inscription_marginTop">30dp</dimen>
+
 </resources>
